Report block_failure for already-committed and write-failure branches in Tomcat
Follow-up to PR review comment r4067498401: TomcatBlockingHelper.commitBlockingResponse()
now reports block_failure when the response was already committed by something other than
us, and when writing the blocking response throws. Safe against false positives from
Tomcat's multiple per-request blocking evaluations via a new blockingResponseInitiated
guard on TomcatBlockResponseFunction, mirroring Netty's existing pattern.